--- a/test1.html
+++ b/test1.html
@@ -1,3 +1,1 @@
-<script>
-throw new Error('<script>alert("XSS")</script>');
-</script>
+<img src="invalid_image.jpg" onerror='throw new Error("<script>alert(1)</script>")'>
