--- a/test1.html
+++ b/test1.html
@@ -1,1 +1,3 @@
-<img src="invalid_image.jpg" onerror='throw new Error("<script>alert(1)</script>")'>
+<script>
+throw new ReferenceError('<IMG SRC=x onerror="alert(String.fromCharCode(88,83,83))">');
+</script>
