--- a/test1.html
+++ b/test1.html
@@ -1,3 +1,14 @@
-<script>
-throw new ReferenceError('<IMG SRC=x onerror="alert(String.fromCharCode(88,83,83))">');
-</script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Unexploitable</title>
+</head>
+<body>
+  <form method="get" action="https://tddbapr.request.dreamhack.games">
+    <input type="text" name="input" id="input">
+    <input type="submit" name="submit" id="submit" value="Submit">
+  </form>
+</body>
+</html>
