--- a/test1.html
+++ b/test1.html
@@ -6,7 +6,7 @@
   <title>Unexploitable</title>
 </head>
 <body>
-  <form method="get" action="https://uodgahm.request.dreamhack.games">
+  <form method="get" action="https://bkvdosi.request.dreamhack.games">
     <input type="text" name="input" id="input">
     <input type="submit" name="submit" id="submit" value="Submit">
   </form>
